fix display on mobile screen

--- a/src/css/04-layout/_layout.scss
+++ b/src/css/04-layout/_layout.scss
@@ -4,7 +4,7 @@
   height: 60px;
   // padding: 30px 0;
   background-color: transparent;
-  z-index: 5;
+  z-index: 99;
   transition: .4s all ease-in-out;
 
   &__container {
@@ -34,6 +34,7 @@
     position: relative;
     background-image: url('../img/section-intro/pic-1.png');
     background-size: cover;
+    height: 100vh;
 
     &::after {
       @include position($top:0, $left:0);
